stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_conditional_skip_workflow.snap
---
source: crates/stepflow-main/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - "--flow=tests/mock/conditional_skip.yaml"
    - "--output=/var/folders/c4/dcr0mh3d183d5kh9gf89wsc00000gn/T/stepflow_test_conditional_skip.dot"
    - "--format=dot"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ Visualization generated: [TEMP_DIR]/stepflow_test_conditional_skip.dot
