stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_invalid_format.snap
---
source: crates/stepflow-main/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - "--flow=tests/mock/basic.yaml"
    - "--output=/var/folders/c4/dcr0mh3d183d5kh9gf89wsc00000gn/T/stepflow_test_basic_output.xyz"
    - "--format=xyz"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'xyz' for '--format <FORMAT>'
  [possible values: dot, svg, png]

For more information, try '--help'.
