stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_stdout_non_dot_format.snap
---
source: crates/stepflow-main/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - "--flow=tests/mock/basic.yaml"
    - "--format=svg"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Only DOT format is supported for stdout output. Use --format=dot or specify --output=<file> for other formats.
