stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_visualize__visualize_with_no_details_option.snap
---
source: crates/stepflow-main/tests/commands/test_visualize.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - visualize
    - "--flow=tests/mock/basic.yaml"
    - "--output=/var/folders/c4/dcr0mh3d183d5kh9gf89wsc00000gn/T/stepflow_test_basic_no_details.dot"
    - "--format=dot"
    - "--no-details"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ Visualization generated: /var/folders/c4/dcr0mh3d183d5kh9gf89wsc00000gn/T/stepflow_test_basic_no_details.dot
